k8s-management/nginx-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-pod
  labels:
    app: nginx
spec:
  containers:
    - name: 
      image: nginx
      ports:
        containerPort: 80
